@startuml ecommerc
title Diagrama de Classe E-Commerce

Class Endereco{
    - id: int
    - principal: String
    - logradouro: String
    - bairro: String
    - numero: String
    - complemento: String
    - cep: String
}

Class Usuario{
    - id: int
    - nome: String
    - cpf: String
    - senha: String
    - email: String
}

enum Sexo{
    - MASCULINO: String
    - FEMININO: String
}

class Produto{
    - id: int
    - nome: String
    - descricao: String
    - valorUnidade: double 
}

class Flor{
    - id: int
    - corPetalas: String
    - alturaCaule: double
}

enum TipoFlor{
    - ROSA: String
    - CRAVO: String
    - TULIPA: String
    - MARGARIDA: String
    - GIRASSOL: String
    - ORQUIDEA: String
}

Class Fornecedor{
    - id: int
    - produtor: String
    - país: String
    - safra: String
    - volume: String
}

Class Telefone{
    - id: int
    - codigoArea: String
    - numero: String
}

Class Estado{
    - id: int
    - nome: String
    - sigla: String
}

Class Municipio{
    - id: int
    - nome: String
}

Flor --|> Produto

Usuario "1"  *--> "*" Endereco

Usuario "1" *--> "*" Telefone

Usuario "*" --> "*" Flor: listaDesejos

Flor "*" --> "1" Fornecedor

Flor "*" --> "1" TipoFlor

Municipio "*" --> "1" Estado

Endereco "*" --> "1" Municipio

Usuario "*" --> "1" Sexo

Fornecedor "1" --> "*" Produto

@enduml